--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
       - ./local_data/:/home/worker/app/local_data
       - ./models/:/home/worker/app/models
     ports:
-      - 8001:8080
+      - 127.0.0.1:8001:8080
     environment:
       PORT: 8080
       PGPT_PROFILES: docker
-      PGPT_MODE: local
+      PGPT_MODE: openai
 
